--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -323,6 +323,7 @@ select option {
     flex: 8;
     display: flex;
     flex-direction: column;
+    position: relative;
     #menu-desktop-upper {
 
       flex: 1;
@@ -334,7 +335,8 @@ select option {
       flex: 1;
       max-height: 35px;
       padding: 5px;
-      position: fixed;
+      //position: fixed;
+      margin-bottom: 50px;
       top: 33px;
       left: 0px;
       right: 0px;
@@ -342,6 +344,8 @@ select option {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+
+      max-width: 100%;
       #menu-desktop-lower-inner {
         max-width: 1000px;
         width: 100%;
@@ -1300,18 +1304,23 @@ select option {
     align-items: center;
     width: 100%;
     text-align: left;
-    @media(min-width: 800px) {
+    @media(min-width: 1000px) {
       flex-direction: row;
-      max-width: 800px;
+      max-width: 1000px;
       align-items: flex-start;
     }
 
     .contacto-panel {
       max-width: 80%;
       min-width: 80%;
-      @media(min-width: 800px) {
+      @media(min-width: 1000px) {
         max-width: 350px;
         min-width: 320px;
+
+      }
+      @media (max-width: 999px) {
+        display: flex;
+        flex-direction: column;
       }
       input[type=text],
       textarea {
@@ -1320,13 +1329,17 @@ select option {
         padding: 5px;
         margin-top: 5px;
         margin-bottom: 5px;
-        @media(min-width: 800px) {
+        @media(min-width: 1000px) {
           max-width: 350px;
+        }
+
+        @media(max-width: 999px) {
+          max-width: 90% !important;
         }
       }
 
       #contacto-enviar-mobile {
-        @media (min-width: 800px) {
+        @media (min-width: 1000px) {
           height: 0px;
           width: 0px;
           visibility: collapse;
@@ -1335,13 +1348,22 @@ select option {
       }
 
       #contacto-enviar-desktop {
-        @media (max-width: 800px) {
+        @media (max-width: 999px) {
           height: 0px;
           width: 0px;
           visibility: collapse;
           display: none;
         }
       }
+    }
+  }
+
+  .contacto-enviar-mobile {
+    @media (min-width: 1000px) {
+      height: 0px;
+      width: 0px;
+      visibility: collapse;
+      display: none;
     }
   }
 }
@@ -1715,7 +1737,7 @@ select option {
 {
   width: 100% !important;
   //margin-top: 20px;
-  font-size: 35px;
+  font-size: 26px;
   font-family: "Montserrat Semibold", sans-serif;
   font-weight: 400;
   color: #17384B;
