--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -317,7 +317,7 @@ select option {
 
   #menu-desktop-logo:hover {
     cursor: pointer;
-  }
+      }
 
   #menu-desktop-right {
     flex: 8;
@@ -366,6 +366,10 @@ select option {
         max-height: 26px;
         position: relative;
         color: white;
+        opacity: 0.5;
+        transition: opacity .5s ease-in-out;
+        -moz-transition: opacity .5s ease-in-out;
+        -webkit-transition: opacity .5s ease-in-out;
         @media (max-width: 1000px) {
           font-size: 11px;
         }
@@ -375,13 +379,21 @@ select option {
       .menu-desktop-btn-selected {
 
         color: white;
+        border-radius: 2px;
         background-color: #406276;
+        opacity: 1;
+        -webkit-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
+        -moz-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
+        box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
+
       }
 
     }
   }
 
 }
+
+
 
 .section-title {
 
@@ -1313,6 +1325,7 @@ select option {
     .contacto-panel {
       max-width: 80%;
       min-width: 80%;
+      margin-top: 20px;
       @media(min-width: 1000px) {
         max-width: 350px;
         min-width: 320px;
@@ -1337,6 +1350,23 @@ select option {
           max-width: 90% !important;
         }
       }
+
+      .contacto-panel-titulo-primario{
+        font-family: 'Montserrat Light', serif;
+        font-size: 18px;
+        font-weight: bolder;
+        color: #133548;
+        margin-top: 10px;
+        margin-bottom: 5px;
+       }
+
+      .contacto-panel-titulo-secundario{
+        font-family: 'Montserrat Light', serif;
+        font-size: 14px;
+        color: black;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        }
 
       #contacto-enviar-mobile {
         @media (min-width: 1000px) {
@@ -1750,6 +1780,9 @@ select option {
     width: 100%;
     max-width: 1000px;
   }
+
+
+
 
   @media (max-width: 600px) {
     font-size: 42px;
@@ -2311,19 +2344,16 @@ select option {
   text-align: center;
   color: white;
   font-size: 20px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-}
+  }
 
 #contacto h2 {
   font-family: 'Lato Regular', serif;
   text-align: center;
   font-size: 16px;
   color: white;
-  margin-bottom: 5px;
   line-height: 22px;
-
-}
+  margin-top: 5px;
+  }
 
 #revistas-listado {
   font-family: "Montserrat Semibold", sans-serif;
@@ -2540,18 +2570,29 @@ select option {
   padding-bottom: 0px !important;
   button{
     border: 0px solid rgba(0,0,0,0);
-    background-color: rgba(0,0,0,0);
+    background-color:lightgrey;
     font-weight: bold;
-    color: white;
+    color: black;
     padding: 10px;
+    opacity: 0.5;
+    transition: opacity .5s ease-in-out;
+    -moz-transition: opacity .5s ease-in-out;
+    -webkit-transition: opacity .5s ease-in-out;
   }
 
   button:hover{
     background-color: #1D3541;
+    color: white;
+    opacity: 1;
   }
 
   .button-selected-institucional{
-    background-color: #1D3541;
+    background-color: #133548;
+    color: white;
+    opacity: 1;
+    -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.39);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.39);
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.39);
   }
 }
 
