--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1783,8 +1783,9 @@ select option {
 {
   width: 100% !important;
   //margin-top: 20px;
+  margin-left: 40px;
   font-size: 26px;
-  font-family: "Montserrat Semibold", sans-serif;
+  font-family: "Roboto-Bold", sans-serif;
   font-weight: 400;
   color: #17384B;
   padding: 10px;
@@ -2181,7 +2182,7 @@ select option {
   }
   #noticias-comentarios-title {
     width: 90%;
-    font-family: 'Montserrat Semibold', serif;
+    font-family: 'Roboto-Bold', serif;
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 10px;
@@ -2673,7 +2674,7 @@ select option {
       padding-top: 4%;
       padding-bottom: 20px;
       h1 {
-        font-family: "Montserrat Semibold", sans-serif, serif, sans-serif;
+        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
         font-size: 36px;
         font-weight: bold;
         width: 100%;
@@ -2719,7 +2720,7 @@ select option {
 
       .titulo-segundo {
         margin-top: 50px;
-        font-family: "Montserrat Semibold", sans-serif, serif, sans-serif;
+        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
         font-size: 36px;
         font-variant: bold;
         width: 100%;
@@ -2734,7 +2735,7 @@ select option {
       z-index: 302;
       .titulo-tercero {
         margin-top: 50px;
-        font-family: "Montserrat Semibold", sans-serif, serif, sans-serif;
+        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
         font-size: 36px;
         font-variant: bold;
         width: 100%;
@@ -2940,6 +2941,12 @@ select option {
   font-style: normal;
   font-weight: normal;
   src: local('Lato Black'), url('Lato-Black.woff') format('woff');
+}
+@font-face {
+  font-family: 'Roboto-Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Roboto-Bold'), url('Roboto-Bold.ttf') format('woff');
 }
 
 //**** ORGANIZATION CHART ****////
