--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -18,7 +18,7 @@ body, html, .view-container {
 }
 
 body {
-  font-family: 'Lato Regular', serif;
+  font-family: 'Open Sans', serif;
   overflow-x: hidden;
 }
 
@@ -357,8 +357,7 @@ select option {
 
       .menu-desktop-btn {
         cursor: pointer;
-        font-family: 'Lato Regular', serif;
-        font-weight: bolder;
+        font-family: "Open Sans", serif, serif;
         margin-top: 10px;
         margin-right: 15px;
         padding: 5px;
@@ -415,14 +414,14 @@ select option {
 .section-title {
 
   display: flex;
+  font-family: "Open Sans", sans-serif;
+  font-size: 22px;
   justify-content: center;
   flex-direction: row;
   align-items: center;
   padding: 5px;
-
   height: 60px;
   width: 100%;
-  font-size: 22px;
   background-color: #406276;
 
   .decorator-01 {
@@ -601,20 +600,20 @@ select option {
   border-color: black;
   text-shadow: 2px 2px black;
   opacity: .7;
-
   text-align: right;
   margin-right: 20%;
   width: 100%;
 
 
   @media(max-width: 450px) {
-    font-size: 70px;
+    font-size: 85px;
+    margin-top:100px;
 
   }
 }
 
 .slide-descr {
-  font-size: 25px;
+  font-size: 30px;
   font-family: 'Lato Regular', serif;
   text-shadow: 2px 2px black;
   opacity: .7;
@@ -622,7 +621,7 @@ select option {
   text-align: right;
   margin-right: 20%;
   @media(max-width: 400px) {
-    font-size: 14px;
+    font-size: 20px;
 
   }
 }
@@ -685,7 +684,8 @@ select option {
         .servicio-titulo {
           font-size: 30px;
           padding-bottom: 10px;
-          font-family: 'Montserrat Semibold', serif;
+          font-family: "Open Sans", serif;
+          font-weight: bold;
           font-variant: small-caps;
 
           @media (min-width: 800px) {
@@ -697,13 +697,13 @@ select option {
 
         .servicio-detalle {
 
-          font-family: 'Lato Regular', serif;
-          font-size: 20px;
+          font-family: "Open Sans", serif;
+          font-size: 16px;
           color: black;
           line-height: 22px;
 
           @media (min-width: 800px) {
-            font-size: 25px;
+            font-size: 22px;
             min-width: 250px;
 
           }
@@ -1792,8 +1792,8 @@ select option {
   width: 100% !important;
   //margin-top: 20px;
   font-size: 26px;
-  font-family: "Roboto-Bold", sans-serif;
-  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
   color: #17384B;
   padding: 10px;
   @include background-image(linear-gradient(left, #DEDEDE, #ffffff));
@@ -1950,7 +1950,7 @@ select option {
 .administracion-sub-title,
 .nuevo-usuario-sub-title,
 .revistas-sub-title {
-  font-family: "Montserrat Semibold", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 35px;
   color: #133548;
   margin-top: 20px;
@@ -2189,7 +2189,8 @@ select option {
   }
   #noticias-comentarios-title {
     width: 90%;
-    font-family: 'Roboto-Bold', serif;
+    font-family: 'Open Sans', serif;
+    font-weight: bold;
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 10px;
@@ -2317,8 +2318,8 @@ select option {
 
     .busqueda-laboral-title {
 
-      font-family: 'Montserrat Semibold', serif;
-      font-variant: small-caps;
+      font-family: "Open Sans", sans-serif, serif;
+      font-weight: bold;
       font-size: 38px;
       padding: 15px;
     }
@@ -2613,7 +2614,8 @@ select option {
   padding-bottom: 0px !important;
   button{
     border: 0px solid rgba(0,0,0,0);
-    font-family: 'Roboto-Bold', serif;
+    font-family: "Open Sans", sans-serif, serif;
+    font-weight: bold;
     font-size: 14px;
     background-color:lightgrey;
     font-weight: bold;
@@ -2688,7 +2690,8 @@ select option {
       padding-top: 4%;
       padding-bottom: 20px;
       h1 {
-        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
+        font-family:"Open Sans", sans-serif;
+        font-weight: bold;
         font-size: 36px;
         font-weight: bold;
         width: 100%;
@@ -2734,7 +2737,8 @@ select option {
 
       .titulo-segundo {
         margin-top: 50px;
-        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
+        font-family: "Open Sans", sans-serif;
+        font-weight: bold;
         font-size: 36px;
         font-variant: bold;
         width: 100%;
@@ -2749,9 +2753,9 @@ select option {
       z-index: 302;
       .titulo-tercero {
         margin-top: 50px;
-        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
+        font-family: "Open Sans", sans-serif, sans-serif;
         font-size: 36px;
-        font-variant: bold;
+        font-weight: bold;
         width: 100%;
         text-align: center;
         margin-bottom: 40px;
