--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -357,8 +357,8 @@ select option {
 
       .menu-desktop-btn {
         cursor: pointer;
-        font-family: 'Lato Regular', serif;
-        font-weight: bolder;
+        font-family: 'Open Sans', serif;
+        font-weight: lighter;
         margin-top: 10px;
         margin-right: 15px;
         padding: 5px;
@@ -419,9 +419,10 @@ select option {
   flex-direction: row;
   align-items: center;
   padding: 5px;
-
   height: 60px;
   width: 100%;
+  font-family: 'Open Sans', serif;
+  //font-weight: bold;
   font-size: 22px;
   background-color: #406276;
 
@@ -791,13 +792,14 @@ select option {
         color: #16374a;
 
         .servicio-titulo {
-          font-size: 30px;
+          font-size: 32px;
           padding-bottom: 10px;
-          font-family: 'Montserrat Semibold', serif;
+          font-family: 'Open Sans', serif;
           font-variant: small-caps;
+          font-weight: bold;
 
           @media (min-width: 800px) {
-            font-size: 34px;
+            font-size: 36px;
 
           }
 
@@ -805,14 +807,15 @@ select option {
 
         .servicio-detalle {
 
-          font-family: 'Lato Regular', serif;
-          font-size: 20px;
+          font-family: 'Open Sans', serif;
+          font-size: 18px;
+          font-weight: light;
           color: black;
           line-height: 22px;
 
           @media (min-width: 800px) {
-            font-size: 25px;
-            min-width: 250px;
+            font-size: 18px;
+            min-width: 270px;
 
           }
 
@@ -1693,7 +1696,7 @@ select option {
 
 #footer {
   cursor: pointer;
-  font-family: 'Lato Regular', serif;
+  font-family: 'Open Sans', serif;
   font-weight: bolder;
   background-color: lightgrey;
   font-size: 16px;
@@ -1900,8 +1903,8 @@ select option {
   width: 100% !important;
   //margin-top: 20px;
   font-size: 26px;
-  font-family: "Roboto-Bold", sans-serif;
-  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
   color: #17384B;
   padding: 10px;
   @include background-image(linear-gradient(left, #DEDEDE, #ffffff));
@@ -2058,7 +2061,7 @@ select option {
 .administracion-sub-title,
 .nuevo-usuario-sub-title,
 .revistas-sub-title {
-  font-family: "Montserrat Semibold", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 35px;
   color: #133548;
   margin-top: 20px;
@@ -2297,7 +2300,7 @@ select option {
   }
   #noticias-comentarios-title {
     width: 90%;
-    font-family: 'Roboto-Bold', serif;
+    font-family: 'Open Sans', serif;
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 10px;
@@ -2425,15 +2428,16 @@ select option {
 
     .busqueda-laboral-title {
 
-      font-family: 'Montserrat Semibold', serif;
-      font-variant: small-caps;
-      font-size: 38px;
+      font-family: 'Open Sans', serif;
+      //font-variant: small-caps;
+      font-size: 34px;
       padding: 15px;
     }
     .busqueda-laboral-texto {
       padding: 5px;
       margin-left: 15px;
-      font-family: 'Lato Regular', serif;
+      font-family: 'Open Sans', serif;
+      font-weight: lighter;
       font-size: 16px;
       margin-top: 15px;
       line-height: 18px;
@@ -2796,7 +2800,7 @@ select option {
       padding-top: 4%;
       padding-bottom: 20px;
       h1 {
-        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
+        font-family: "Open Sans", sans-serif, serif, sans-serif;
         font-size: 36px;
         font-weight: bold;
         width: 100%;
@@ -2806,7 +2810,7 @@ select option {
 
       p {
         color: black;
-        font-family: 'Lato Regular', serif;
+        font-family: 'Open Sans', serif;
         font-size: 17px;
         line-height: 23px;
       }
@@ -2828,7 +2832,7 @@ select option {
           li {
             list-style-type: disc;
             color: black;
-            font-family: 'Lato Regular', serif;
+            font-family: 'Open Sans', serif;
             font-size: 17px;
             line-height: 23px;
           }
@@ -2842,7 +2846,7 @@ select option {
 
       .titulo-segundo {
         margin-top: 50px;
-        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
+        font-family: "Open Sans", sans-serif, serif, sans-serif;
         font-size: 36px;
         font-weight: bold;
         width: 100%;
@@ -2857,9 +2861,9 @@ select option {
       z-index: 302;
       .titulo-tercero {
         margin-top: 50px;
-        font-family: "Roboto-Bold", sans-serif, serif, sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-size: 36px;
-        font-variant: bold;
+        font-weight: bold;
         width: 100%;
         text-align: center;
         margin-bottom: 40px;
