--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -204,7 +204,7 @@ select option {
 
   .menu-desktop-btn {
     margin-top: 15px;
-    font-family: 'Montserrat Semibold', serif;
+    font-family: 'Open Sans', serif;
     line-height: 18px;
     padding: 5px;
     font-variant: all-petite-caps;
@@ -359,6 +359,7 @@ select option {
         cursor: pointer;
         font-family: 'Open Sans', serif;
         font-weight: lighter;
+        letter-spacing: .9px;
         margin-top: 10px;
         margin-right: 15px;
         padding: 5px;
@@ -1487,6 +1488,11 @@ select option {
         }
       }
 
+      .textoareaconsulta{
+        height: 100px;
+        width: 320px;
+
+      }
       .contacto-panel-titulo-primario{
         font-family: 'Montserrat Light', serif;
         font-size: 18px;
@@ -2732,6 +2738,7 @@ select option {
     font-size: 14px;
     background-color:lightgrey;
     font-weight: bold;
+    letter-spacing: 1px;
     color: black;
     padding: 10px;
     opacity: 0.9;
@@ -3178,6 +3185,7 @@ select option {
       width: 100%;
       display: block;
       font-weight: bold;
+      letter-spacing: 2px;
       text-align: center;
       padding: 10px;
       border: 0px solid;
