--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2819,6 +2819,7 @@ select option {
     max-height: 1200px;
     min-width: 100% !important;
     max-width: 100% !important;
+    text-align: justify;
     #institucional-main-primero,
     #institucional-main-segundo,
     #institucional-main-tercero {
