--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -317,7 +317,7 @@ select option {
 
   #menu-desktop-logo:hover {
     cursor: pointer;
-      }
+  }
 
   #menu-desktop-right {
     flex: 8;
@@ -374,35 +374,33 @@ select option {
         -ms-transition: opacity .5s ease-in-out;
         -o-transition: opacity .5s ease-in-out;
         transition: opacity .5s ease-in-out;
-        
+
         @media (max-width: 1000px) {
           font-size: 11px;
         }
 
       }
 
-      .menu-desktop-btn-selected{
+      .menu-desktop-btn-selected {
         color: white;
         border-radius: 2px;
         background-color: #406276;
         opacity: 1;
-        -webkit-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
-        -moz-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
-        box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
+        -webkit-box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.44);
+        -moz-box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.44);
+        box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.44);
 
       }
-      .menu-desktop-btn:hover{
+      .menu-desktop-btn:hover {
         color: white;
 
         border-radius: 2px;
         background-color: #406276;
         opacity: 1;
 
-        
-        
-        -webkit-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
-        -moz-box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
-        box-shadow: 10px 10px 5px -6px rgba(0,0,0,0.44);
+        -webkit-box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.44);
+        -moz-box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.44);
+        box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.44);
 
       }
 
@@ -410,8 +408,6 @@ select option {
   }
 
 }
-
-
 
 .section-title {
 
@@ -529,9 +525,8 @@ select option {
       animation: hide-slide .4s;
     }
 
-
     .slide-descr-shown,
-    .slide-title-shown{
+    .slide-title-shown {
       opacity: .7 !important;
     }
 
@@ -634,9 +629,6 @@ select option {
       }
     }
 
-
-
-
     @keyframes show-slide {
       0% {
         opacity: 0;
@@ -715,7 +707,6 @@ select option {
   text-align: right;
   margin-right: 20%;
   width: 100%;
-
 
   @media(max-width: 450px) {
     font-size: 70px;
@@ -914,7 +905,6 @@ select option {
 
 }
 
-
 #noticias,
 #noticias-main {
 
@@ -993,7 +983,8 @@ select option {
       }
 
       .text-main-noticia {
-        text-align: justify;
+        margin-top: 10px;
+        text-align: left;
         font-family: 'Montserrat Light', serif;
         width: 90%;
         margin-bottom: 10px;
@@ -1487,27 +1478,27 @@ select option {
         }
       }
 
-      .textoareaconsulta{
+      .textoareaconsulta {
         height: 100px;
         width: 320px;
 
       }
-      .contacto-panel-titulo-primario{
+      .contacto-panel-titulo-primario {
         font-family: 'Montserrat Light', serif;
         font-size: 18px;
         font-weight: bolder;
         color: #133548;
         margin-top: 25px;
         margin-bottom: 5px;
-       }
+      }
 
-      .contacto-panel-titulo-secundario{
+      .contacto-panel-titulo-secundario {
         font-family: 'Montserrat Light', serif;
         font-size: 14px;
         color: black;
         margin-top: 10px;
         margin-bottom: 5px;
-        }
+      }
 
       #contacto-enviar-mobile {
         @media (min-width: 1000px) {
@@ -1784,7 +1775,7 @@ select option {
   max-width: 1000px;
 }
 
-#contacto-container{
+#contacto-container {
   min-height: 320px;
 
 }
@@ -1846,8 +1837,7 @@ select option {
 #revistas-form,
 #busquedas-laborales-form,
 #ingreso-form,
-#institucional-main-container
-{
+#institucional-main-container {
   max-width: 1000px;
   min-width: 320px;
   @media(max-width: 500px) {
@@ -1882,7 +1872,7 @@ select option {
   width: 100%;
   min-height: 700px;
 
-  p{
+  p {
     font-family: "Open Sans";
     margin-top: 10px;
     margin-bottom: 50px;
@@ -1891,7 +1881,7 @@ select option {
     color: #133548;
   }
 
-  h1{
+  h1 {
     font-family: "Open Sans";
     margin-top: 30px;
     font-size: 30px;
@@ -1915,7 +1905,7 @@ select option {
   }
 }
 
-#nuevo-usuario-form{
+#nuevo-usuario-form {
   min-height: 700px;
 
 }
@@ -1936,8 +1926,7 @@ select option {
 .busquedas-laborales-title,
 .revistas-title,
 .contacto-title,
-.servicios-title
-{
+.servicios-title {
   width: 100% !important;
   //margin-top: 20px;
   font-size: 26px;
@@ -1954,8 +1943,7 @@ select option {
     max-width: 1000px;
   }
 
-
-  #institucional-titulo{
+  #institucional-titulo {
     width: 100% !important;
     //margin-top: 20px;
     font-size: 26px;
@@ -1972,9 +1960,6 @@ select option {
     }
 
   }
-
-
-
 
   @media (max-width: 600px) {
     font-size: 42px;
@@ -2031,8 +2016,7 @@ select option {
 }
 
 .administracion-button-bar,
-.nuevo-usuario-button-bar
-{
+.nuevo-usuario-button-bar {
   display: flex;
   flex-direction: row;
 
@@ -2235,7 +2219,7 @@ select option {
 #noticias-panel-texto {
   color: white;
   padding: 5px;
-  min-width: 60%;
+  min-width: 50%;
   #noticias-panel-titulo {
 
     width: 100%;
@@ -2251,13 +2235,15 @@ select option {
     font-family: 'Montserrat Light', serif;
     width: 100%;
     margin-bottom: 10px;
-    text-align: justify;
+
     max-height: 400px;
     min-height: 200px;
     overflow-y: auto;
     font-size: 12px;
     line-height: 17px;
     color: #FFFFFF;
+    margin-top: 20px;
+    text-align: left;
 
   }
 }
@@ -2539,7 +2525,7 @@ select option {
   text-align: center;
   color: white;
   font-size: 20px;
-  }
+}
 
 #contacto h2 {
   font-family: 'Lato Regular', serif;
@@ -2548,7 +2534,7 @@ select option {
   color: white;
   line-height: 22px;
   margin-top: 5px;
-  }
+}
 
 #revistas-listado {
   font-family: "Montserrat Semibold", sans-serif;
@@ -2764,11 +2750,11 @@ select option {
   justify-content: center;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
-  button{
-    border: 0px solid rgba(0,0,0,0);
+  button {
+    border: 0px solid rgba(0, 0, 0, 0);
     font-family: 'Roboto-Bold', serif;
     font-size: 14px;
-    background-color:lightgrey;
+    background-color: lightgrey;
     font-weight: bold;
     letter-spacing: 1px;
     color: black;
@@ -2777,34 +2763,29 @@ select option {
     transition: opacity .5s ease-in-out;
     -moz-transition: opacity .5s ease-in-out;
     -webkit-transition: opacity .5s ease-in-out;
-  @media(max-width: 400px){
-    font-size: 11px;
+    @media(max-width: 400px) {
+      font-size: 11px;
+    }
+
   }
 
-
-  }
-
-  button:hover{
+  button:hover {
     background-color: #1D3541;
     color: white;
     opacity: 1;
   }
 
-  .button-selected-institucional{
+  .button-selected-institucional {
     background-color: #133548;
     color: white;
     opacity: 1;
-    -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.39);
-    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.39);
-    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.39);
+    -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.39);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.39);
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.39);
   }
 }
 
-
-
 #institucional-main-container {
-
-
 
   position: relative;
 
@@ -3111,6 +3092,7 @@ select option {
   font-weight: normal;
   src: local('Lato Black'), url('Lato-Black.woff') format('woff');
 }
+
 @font-face {
   font-family: 'Roboto-Bold';
   font-style: normal;
