--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -973,8 +973,8 @@ select option {
       }
 
       .foto_noticia{
-        width: 254px;
-        height: 150px;
+        width: 250px;
+        height: 200px;
         margin-bottom: 15px;
         margin-top: 10px;
         border: 4px solid white;
@@ -984,8 +984,8 @@ select option {
         border-radius: 20px;
         overflow: hidden;
         img {
-          height: 100vmax;
-          height: 100vmax;
+          height: auto;
+          width: 100%;
           vertical-align: middle;
         }
       }
